--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -454,6 +454,22 @@
     "@landingpage_creator_placeholder_contact_email": {
         "description": "Placeholder for contact email address in landingpage creator"
     },
+    "landingpage_creator_business_model_title": "Business Model",
+    "@landingpage_creator_business_model_title": {
+        "description": "Title for business model selection in landingpage creator"
+    },
+    "landingpage_creator_business_model_b2b_label": "B2B",
+    "@landingpage_creator_business_model_b2b_label": {
+        "description": "Label for B2B business model"
+    },
+    "landingpage_creator_business_model_b2c_label": "B2C",
+    "@landingpage_creator_business_model_b2c_label": {
+        "description": "Label for B2C business model"
+    },
+    "landingpage_creator_business_model_info_tooltip": "Choose whether your customers are B2B (business customers) or B2C (end consumers). This is important to embed a disclaimer on the landing page in case of B2B customers.\\nIf you address both business customers and end consumers, choose B2C.",
+    "@landingpage_creator_business_model_info_tooltip": {
+        "description": "Tooltip text for the business model InfoButton"
+    },
     "error_msg_pleace_upload_picture": "Please upload an image",
     "@error_msg_pleace_upload_picture": {
         "description": "Error message when no image has been uploaded."
