--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1454,6 +1454,10 @@
     "@landingpage_pagebuilder_config_menu_anchor_button_type": {
         "description": "Anker Button Titel im Pagebuilder Config Menü"
     },
+    "landingpage_pagebuilder_config_menu_calendly_type": "Calendly",
+    "@landingpage_pagebuilder_config_menu_calendly_type": {
+        "description": "Calendly Titel im Pagebuilder Config Menü"
+    },
     "landingpage_pagebuilder_config_menu_unknown_type": "Unbekannt",
     "@landingpage_pagebuilder_config_menu_unknown_type": {
         "description": "Unbekannt Titel im Pagebuilder Config Menü"
