fixed some responsive layout for tablet and made promoters observer more robust.

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -3045,7 +3045,7 @@
     "@profile_general_tab": {
         "description": "Tab-Titel für persönliche Daten im Profil"
     },
-    "profile_company_tab": "Unternehmen",
+    "profile_company_tab": "Unter\u00ADnehmen",
     "@profile_company_tab": {
         "description": "Tab-Titel für Unternehmen im Profil"
     },
